--- a/ClimeronToolsForPvZ.csproj
+++ b/ClimeronToolsForPvZ.csproj
@@ -33,13 +33,16 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Classes\BuiltInGameEnums.cs" />
+    <Compile Include="Classes\PrefabsEditors\MainMenuFHDPrefabEditor.cs" />
     <Compile Include="Classes\UI\CanvasCreator.cs" />
     <Compile Include="Classes\UI\CustomFontsManager.cs" />
     <Compile Include="Classes\NewtonsoftJsonIntegration\CustomJsonSerializerSettings.cs" />
     <Compile Include="Classes\NewtonsoftJsonIntegration\IgnorePropertiesResolver.cs" />
     <Compile Include="Classes\AssetsManagement\ModAssetsManager.cs" />
     <Compile Include="Classes\Settings.cs" />
+    <Compile Include="Classes\UI\CustomTexturesManager.cs" />
     <Compile Include="Classes\UnityExplorerIntegration.cs" />
+    <Compile Include="Components\MainMenuFHDTracker.cs" />
     <Compile Include="Components\MouseBlocker.cs" />
     <Compile Include="Extensions\StringExtensions.cs" />
     <Compile Include="System\Index.cs" />
@@ -55,7 +58,6 @@
     <Compile Include="Classes\Main.cs" />
     <Compile Include="Extensions\TypeExtensions.cs" />
     <Compile Include="Patches\MainMenu_BtnPatches.cs" />
-    <Compile Include="Patches\UIMgrPatches.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="System\Range.cs" />
     <Compile Include="System\Runtime\CompilerServices\RuntimeHelpers.cs" />
@@ -67,6 +69,9 @@
     <Reference Include="Assembly-CSharp">
       <HintPath>..\..\MelonLoader\Il2CppAssemblies\Assembly-CSharp.dll</HintPath>
     </Reference>
+    <Reference Include="Il2CppInterop.Generator">
+      <HintPath>..\..\MelonLoader\net6\Il2CppInterop.Generator.dll</HintPath>
+    </Reference>
     <Reference Include="Il2CppInterop.Runtime">
       <HintPath>..\..\MelonLoader\net6\Il2CppInterop.Runtime.dll</HintPath>
     </Reference>
@@ -76,8 +81,16 @@
     <Reference Include="Il2CppSystem">
       <HintPath>..\..\MelonLoader\Il2CppAssemblies\Il2CppSystem.dll</HintPath>
     </Reference>
+    <Reference Include="Il2CppSystem.Configuration, Version=4.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\MelonLoader\Il2CppAssemblies\Il2CppSystem.Configuration.dll</HintPath>
+    </Reference>
     <Reference Include="Il2CppSystem.Core">
       <HintPath>..\..\MelonLoader\Il2CppAssemblies\Il2CppSystem.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="Il2CppSystem.Xml, Version=4.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\MelonLoader\Il2CppAssemblies\Il2CppSystem.Xml.dll</HintPath>
     </Reference>
     <Reference Include="MelonLoader">
       <HintPath>..\..\MelonLoader\net35\MelonLoader.dll</HintPath>
@@ -101,8 +114,15 @@
     <Reference Include="UnityEngine.AssetBundleModule">
       <HintPath>..\..\MelonLoader\Il2CppAssemblies\UnityEngine.AssetBundleModule.dll</HintPath>
     </Reference>
+    <Reference Include="UnityEngine.AudioModule, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\MelonLoader\Il2CppAssemblies\UnityEngine.AudioModule.dll</HintPath>
+    </Reference>
     <Reference Include="UnityEngine.CoreModule">
       <HintPath>..\..\MelonLoader\Il2CppAssemblies\UnityEngine.CoreModule.dll</HintPath>
+    </Reference>
+    <Reference Include="UnityEngine.ImageConversionModule">
+      <HintPath>..\..\MelonLoader\Il2CppAssemblies\UnityEngine.ImageConversionModule.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.IMGUIModule">
       <HintPath>..\..\MelonLoader\Il2CppAssemblies\UnityEngine.IMGUIModule.dll</HintPath>
